fix: scrollbar leaderboard to auto

--- a/gesfut/src/app/admin/leaderboard/leaderboard.component.scss
+++ b/gesfut/src/app/admin/leaderboard/leaderboard.component.scss
@@ -47,7 +47,7 @@ hr {
   position: relative;
   padding-top: 16px;
   @media (max-width: 768px) {
-    overflow-x: scroll;
+    overflow-x: auto;
   }
 }
 
